--- a/style.css
+++ b/style.css
@@ -71,12 +71,10 @@
 }
 
 .menu-item:hover {
-    opacity: .9;
+    color: rgba(255, 255, 255, 0.5);
 }
 
-.nav-active {
-    /*opacity: .5;*/
-}
+.nav-active {}
 
 .dropdown-item {
     font-family: 'Lato', sans-serif;
