added new files

--- a/static/index.css
+++ b/static/index.css
@@ -97,7 +97,7 @@
 /* ===== HERO SECTION ===== */
 
 .hero-section {
-    background: linear-gradient( rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('./images/Capture.png');
+    background: linear-gradient( rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../images/Capture.png');
     height: 100vh;
     background-size: cover;
     background-position: center;
